Fixed rebase problems due to changes in PR #3894.

--- a/radio/src/targets/pl18/CMakeLists.txt
+++ b/radio/src/targets/pl18/CMakeLists.txt
@@ -56,7 +56,7 @@ add_definitions(
   -DSTM32F429_439xx -DSTM32F429xx
   -DSDRAM -DCOLORLCD -DLIBOPENUI
   -DHARDWARE_TOUCH -DHARDWARE_KEYS
-  -DSOFTWARE_KEYBOARD -DUSE_TRIMS_AS_BUTTONS)
+  -DSOFTWARE_KEYBOARD -DUSE_HATS_AS_KEYS)
 
 set(SDRAM ON)
 
