Amended some PL18 properties in companion.

--- a/companion/src/CMakeLists.txt
+++ b/companion/src/CMakeLists.txt
@@ -316,8 +316,10 @@ elseif(PCB STREQUAL X10 AND PCBREV STREQUAL TX16S)
   set(FLAVOUR tx16s)
 elseif(PCB STREQUAL X10 AND PCBREV STREQUAL T18)
   set(FLAVOUR t18)
-elseif(PCB STREQUAL NV14 AND PCBREV STREQUAL EL18)
+  elseif(PCB STREQUAL NV14 AND PCBREV STREQUAL EL18)
   set(FLAVOUR el18)
+  elseif(PCB STREQUAL PL18)
+  set(FLAVOUR pl18)
 else()
   string(TOLOWER ${PCB} FLAVOUR)
 endif()
