Use LED strip for status LED.

--- a/radio/src/targets/pl18/CMakeLists.txt
+++ b/radio/src/targets/pl18/CMakeLists.txt
@@ -144,6 +144,7 @@ set(FIRMWARE_TARGET_SRC
   key_driver.cpp
   battery_driver.cpp
   backlight_driver.cpp
+  led_driver.cpp
   sdram_driver.c
   )
 
