--- a/radio/src/targets/taranis/CMakeLists.txt
+++ b/radio/src/targets/taranis/CMakeLists.txt
@@ -459,22 +459,22 @@ elseif(PCB STREQUAL XLITES)
   add_definitions(-DMANUFACTURER_FRSKY)
 endif()
 
-message("CPU_TYPE_FULL = ${CPU_FULL_TYPE}")
 if(CPU_TYPE_FULL STREQUAL STM32F205xE)
   set(CPU_TYPE STM32F2)
   add_definitions(-DSTM32F205xx)
-  set(TARGET_LINKER_DIR stm32f20x)
-elseif ((CPU_TYPE_FULL STREQUAL STM32F407xE) OR (CPU_TYPE_FULL STREQUAL STM32F407xG))
+  set(LINKER_SCRIPT targets/taranis/stm32f2_flash.ld)
+elseif (CPU_TYPE_FULL STREQUAL STM32F407xE)
   set(CPU_TYPE STM32F4)
-  add_definitions(-DSTM32F40_41xxx -DSTM32F407xx -DCCMRAM)
-  set(TARGET_LINKER_DIR stm32f40x)
-  if (CPU_TYPE_FULL STREQUAL STM32F407xG)
-    set(TARGET_FLASH_SIZE 1M)
-  endif()
+  add_definitions(-DSTM32F40_41xxx -DSTM32F407xx)
+  set(LINKER_SCRIPT targets/taranis/stm32f4_512k_flash.ld)
+elseif (CPU_TYPE_FULL STREQUAL STM32F407xG)
+  set(CPU_TYPE STM32F4)
+  add_definitions(-DSTM32F40_41xxx -DSTM32F407xx)
+  set(LINKER_SCRIPT targets/taranis/stm32f4_1m_flash.ld)
 elseif (CPU_TYPE_FULL STREQUAL STM32F413xG)
   set(CPU_TYPE STM32F4)
   add_definitions(-DSTM32F40_41xxx -DSTM32F413xx)
-  set(TARGET_LINKER_DIR stm32f413)
+  set(LINKER_SCRIPT targets/taranis/stm32f413_flash.ld)
 else()
   message( FATAL_ERROR "Unknown CPU_TYPE_FULL" )
 endif()
