--- a/radio/src/targets/pl18/CMakeLists.txt
+++ b/radio/src/targets/pl18/CMakeLists.txt
@@ -126,6 +126,12 @@ set(BOARD_COMMON_SRC
   drivers/frftl.cpp
 )
 
+if(ROTARY_ENCODER)
+  list(APPEND BOARD_COMMON_SRC
+    targets/common/arm/stm32/rotary_encoder_driver.cpp
+  )
+endif()
+
 # Bootloader board library
 add_library(board_bl OBJECT EXCLUDE_FROM_ALL
   ${BOARD_COMMON_SRC}
@@ -155,10 +161,8 @@ add_library(board OBJECT EXCLUDE_FROM_ALL
   drivers/frftl.cpp
 )
 
-if(ROTARY_ENCODER)
-  list(APPEND BOARD_COMMON_SRC
-    targets/common/arm/stm32/rotary_encoder_driver.cpp
-  )
+if(DEBUG)
+  target_compile_definitions(board PRIVATE -DDEBUG)
 endif()
 
 set(FIRMWARE_SRC ${FIRMWARE_SRC} $<TARGET_OBJECTS:board>)
